# gnome-search-providers-jetbrains

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  de.swsnr.JetbrainsSearchProvider.service  de.swsnr.searchprovider.Jetbrains.service  deny.toml  jetbrains-search-provider.py  release.toml
.github/: dependabot.yml
.github/workflows/: test.yml
crates/common/: Cargo.toml
crates/common/src/: app.rs  dbus.rs  lib.rs  log.rs  logcontrol.rs  logging.rs  mainloop.rs  matching.rs  serviceinterface.rs  source.rs  systemd.rs  util.rs
crates/common/src/app/: item.rs  launchservice.rs  provider.rs  searchprovider.rs
crates/common/src/app/searchprovider/: extensions.rs
crates/common/src/matching/: fs.rs
dbus-1/: de.swsnr.searchprovider.Jetbrains.service
gsettings/: de.swsnr.searchprovider.jetbrains.gschema.xml
package/: Makefile
providers/: de.swsnr.searchprovider.jetbrains-toolbox.idea-ce.ini  de.swsnr.searchprovider.jetbrains.arch.idea-ce.ini  de.swsnr.searchprovider.jetbrains.toolbox.android-studio.ini  de.swsnr.searchprovider.jetbrains.toolbox.clion.ini  de.swsnr.searchprovider.jetbrains.toolbox.goland.ini  de.swsnr.searchprovider.jetbrains.toolbox.idea-ce.ini  de.swsnr.searchprovider.jetbrains.toolbox.idea.ini  de.swsnr.searchprovider.jetbrains.toolbox.phpstorm.ini  de.swsnr.searchprovider.jetbrains.toolbox.pycharm.ini  de.swsnr.searchprovider.jetbrains.toolbox.rider.ini  de.swsnr.searchprovider.jetbrains.toolbox.rubymine.ini  de.swsnr.searchprovider.jetbrains.toolbox.rustrover.ini  de.swsnr.searchprovider.jetbrains.toolbox.studio.ini  de.swsnr.searchprovider.jetbrains.toolbox.webstorm.ini
scripts/: check
src/: config.rs  gnome.rs  jetbrains.rs  launch.rs  launchservice.rs  logcontrol.rs  logging.rs  main.rs  providers.rs  reload.rs  searchprovider.rs  systemd.rs
src/gnome/: searchprovider.rs
src/jetbrains/: config.rs
src/tests/: recentProjects.xml  recentSolutions.xml
systemd/: de.swsnr.searchprovider.Jetbrains.service  gnome-search-providers-jetbrains.service
