[package]
name = "gnome-search-providers-jetbrains"
description = "Gnome search providers for recent projects from Jetbrains IDEs"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
regex = { version = "1.9.3", default-features = false, features = ["std", "perf"] }
elementtree = "1.2.3"
anyhow = { version = "1.0.75", default-features = false, features = ["std", "backtrace"] }
clap = { version = "4.3.20", default-features = false, features = [
    "std",
    "cargo",
] }
gnome-search-provider-common = { path = "./crates/common" }
futures-executor = { version = "0.3.28", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
tracing-futures = { version = "0.2.5", default-features = false }

[dev-dependencies]
similar-asserts = "1.5.0"
configparser = "3.0.2"

[package.metadata.release]
pre-release-replacements = [
    # Update the changelog
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: ", replace = "[Unreleased]: https://github.com/swsnr/gnome-search-providers-jetbrains/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]

[workspace]
members = ["./crates/common"]

[workspace.package]
readme = "README.md"
homepage = "https://github.com/swsnr/gnome-search-providers-jetbrains"
repository = "https://github.com/swsnr/gnome-search-providers-jetbrains"
version = "1.14.0"
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2021"
rust-version = "1.67"
# We don't publish this to crates.io; you can't install it with cargo install
# because you'd miss the required service and configuration files, and you
# wouldn't want to depend on it either.
publish = false

[workspace.metadata.release]
# Don't publish anything
publish = false
# Only release from main
allow-branch = ["main"]

# Use the same tag for all crates in this workspace.
# crates in crates/ use tag = false
tag-name = "v{{version}}"

# I prefer these messages over the default (cargo-release) messages
tag-message = "Version {{tag_name}}"
pre-release-commit-message = "Release {{version}}"
