[package]
name = "gnome-search-providers-jetbrains"
description = "Gnome search providers for recent projects from Jetbrains IDEs"
readme = "README.md"
homepage = "https://github.com/swsnr/gnome-search-providers-jetbrains"
repository = "https://github.com/swsnr/gnome-search-providers-jetbrains"
version = "1.18.0"
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2021"
rust-version = "1.75"
# We don't publish this to crates.io; you can't install it with cargo install
# because you'd miss the required service and configuration files, and you
# wouldn't want to depend on it either.
publish = false

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std", "backtrace"] }
clap = { version = "4.4.4", default-features = false, features = ["std", "cargo", ] }
elementtree = "1.2.3"
gio = { version = "0.19.0", features = ["v2_60"] }
glib = { version = "0.19.0", features = ["log"] }
indexmap = "2.0.0"
libc = "0.2.148"
regex = { version = "1.9.5", default-features = false, features = ["std", "perf"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
tracing-futures = { version = "0.2.5", default-features = false, features = ["std-future"] }
tracing-journald = "0.3.0"
tracing-log = { version = "0.2.0", default-features = false, features = ["log-tracer"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["registry", "parking_lot", "env-filter", "tracing-log"] }
logcontrol-zbus = "2.0.0"
logcontrol-tracing = "0.2.0"
zbus = { version = "4.0.0", default-features = false, features = ["async-io"] }

[dev-dependencies]
similar-asserts = "1.5.0"
configparser = "3.0.2"

[package.metadata.release]
# Don't publish anything
publish = false
# Only release from main
allow-branch = ["main"]
# Don't build before release; that's what CI does.
verify = false
# Use the same tag for all crates in this workspace.
# crates in crates/ use tag = false
tag-name = "v{{version}}"
# I prefer these messages over the default (cargo-release) messages
tag-message = "Version {{tag_name}}"
pre-release-commit-message = "Release {{version}}"
pre-release-replacements = [
    # Update the changelog
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: ", replace = "[Unreleased]: https://github.com/swsnr/gnome-search-providers-jetbrains/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]
