[package]
name = "gnome-search-provider-common"
description = "Common code for Gnome search providers"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
indexmap = "1.9.2"
zbus = "3.5.0"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "parking_lot",
    "env-filter",
] }
tracing-futures = { version = "0.2.5", default-features = false, features = [
    "std-future",
    "futures-03",
] }
futures-util = "0.3.25"
futures-channel = "0.3.25"
gio = { version = "0.16.0", features = ["v2_60"] }
glib = { version = "0.16.1", features = ["log"] }
libc = "0.2.137"

[dev-dependencies]
pretty_assertions = "^1"
